Commit de la primer funcionalidad, implementacion de calculadora

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,7 @@
     <string name="multiplicacion">*</string>
     <string name="division">/</string>
     <string name="igual">=</string>
+    <string name="borrar">BORRAR</string>
+
+    <string name="error">ERROR</string>
 </resources>
